tests/snapshots/run_wpt_conformance__litert_where_float32_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "where.https.any.js",
    "where float32 5D tensors",
    "litert",
    "PASS",
)
