tests/snapshots/run_wpt_conformance__onnx_abs_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "abs.https.any.js",
    "abs float16 1D tensor",
    "onnx",
    "PASS",
)
